# cmm-

./: .clang-format  .clang-tidy  .gitignore  .gitigore  CMakeLists.txt
.github/workflows/: codeql-analysis.yml
cmake/: Warnings.cmake
docs/: README.md  specification.md
src/: CMakeLists.txt  cmd.cpp  cmd.hpp  cmm.hpp  main.cpp
src/cmm/: cmm.cpp  cmm.hpp  components.hpp  config.cpp  config.hpp  escape_chars.cpp  escape_chars.hpp  inlines.cpp  inlines.hpp  logger.hpp  util.cpp  util.hpp
src/cmm-lib/: CMakeLists.txt
src/cmm-lib/cmm-lib/: cmm.cpp  config.cpp  escape_chars.cpp  inlines.cpp  logger.cpp  syntax_error.cpp  text_block.cpp  util.cpp
src/cmm-lib/cmm-lib/_private/: inline_state.hpp
src/cmm-lib/cmm-lib/components/: base.cpp  types.cpp
src/cmm-lib/include/cmm/: cmm.hpp  config.hpp  escape_chars.hpp  inlines.hpp  logger.hpp  syntax_error.hpp  text_block.hpp  usings.hpp  util.hpp
src/cmm-lib/include/cmm/components/: base.hpp  types.hpp
src/cmm-parse/: CMakeLists.txt  cmd.cpp  cmd.hpp  main.cpp
src/cmm/_private/: inline_state.hpp
src/cmm/components/: base.hpp  types.hpp
tests/: CMakeLists.txt  full_spec.cpp  inlines.cpp
tests/unit/: CMakeLists.txt  block_examples.hpp  block_identifier.cpp  block_separator.cpp
